RESOLVED FIXED95900
Fix export macros in IntegerToStringConversion.h
https://bugs.webkit.org/show_bug.cgi?id=95900
Summary Fix export macros in IntegerToStringConversion.h
Patrick R. Gansterer
Reported 2012-09-05 15:14:15 PDT
Fix export macros in IntegerToStringConversion.h
Attachments
Patch (2.02 KB, patch)
2012-09-05 15:21 PDT, Patrick R. Gansterer
no flags
Patch (2.02 KB, patch)
2012-09-05 15:24 PDT, Patrick R. Gansterer
benjamin: review+
Patch (2.01 KB, patch)
2012-09-06 01:05 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2012-09-05 15:21:32 PDT
WebKit Review Bot
Comment 2 2012-09-05 15:23:50 PDT
Attachment 162348 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/te..." exit_code: 1 Source/WTF/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Patrick R. Gansterer
Comment 3 2012-09-05 15:24:32 PDT
Benjamin Poulain
Comment 4 2012-09-05 21:58:24 PDT
Comment on attachment 162350 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=162350&action=review Let's already r+ this as it is correct. Feel free to land this patch, or to do the complete cleaning of IntegerToStringConversion. > Source/WTF/ChangeLog:13 > + (WTF): Useless.
Patrick R. Gansterer
Comment 5 2012-09-06 01:05:02 PDT
Created attachment 162444 [details] Patch Land this now, since bug 95940 is more work.
WebKit Review Bot
Comment 6 2012-09-06 11:05:39 PDT
Comment on attachment 162444 [details] Patch Clearing flags on attachment: 162444 Committed r127761: <http://trac.webkit.org/changeset/127761>
WebKit Review Bot
Comment 7 2012-09-06 11:05:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.