Fix export macros in IntegerToStringConversion.h https://bugs.webkit.org/show_bug.cgi?id=95900

Reviewed by Benjamin Poulain.

The WTF_EXPORT_STRING_API must be used only for symbols which are compiled
on windows in "non-WTF" binaries too. Since this isn't valid for the
IntegerToStringConversion function replace it with WTF_EXPORT_PRIVATE.

* wtf/text/IntegerToStringConversion.h:


Canonical link: https://commits.webkit.org/113862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127761 268f45cc-cd09-0410-ab3c-d52691b4dbfc